--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         
     </button>
     <br><br><br><br><br><br><br><br>
-     <center style="">
+     <center>
          <div class="container">
             <h5 style="float: none;color: red; padding: 30px;background-color: white;border-radius: 20px;"><b>NOTE</b> : The input you give should be the same word as per CocoSsd or else it will throw error or else it would not detect the object name that you wrote in the input. ADD SOMETHING IN THE INPUT AND THEN CLICK ON START BTN. <a href="https://shaan-lashkari.github.io/NewFunctionality/" target="_blank">#NewFunctionality</a></h5>
          </div>
